Closed Bug 337009 Opened 20 years ago Closed 20 years ago

Coverity OOM crash [@ nssList_Count - nssTrustDomain_GetCertsFromCache] Dereferencing possibly NULL "certList"

Categories

(NSS :: Libraries, defect, P2)

3.11
All
Linux
defect

Tracking

(Not tracked)

RESOLVED FIXED
3.11.2

People

(Reporter: timeless, Assigned: alvolkov.bgs)

References

()

Details

(Keywords: coverity, crash, Whiteboard: CID 294)

Crash Data

Attachments

(1 file)

Event returned_null: Function "nssList_Create" returned NULL value (checked 15 out of 17 times)
Hardware: PC → All
Target Milestone: --- → 3.11.2
Priority: -- → P2
Assignee: nobody → alexei.volkov.bugs
this part of the code if never used(according to lxr). May be this is something that need to be removed.
Attachment #222395 - Flags: review?(nelson)
(In reply to comment #1) > this part of the code if never used(according to lxr). > May be this is something that need to be removed. Are you saying that nssTrustDomain_GetCertsFromCache is never called? (Appears to me that it is) Or are you saying that all callers always provde a non-NULL certListOpt?
Comment on attachment 222395 [details] [diff] [review] return null if could not create an empty list r=nelson
Attachment #222395 - Flags: review?(nelson) → review+
It is called at least four times, but all the callers provide already created certListOpt
trunk: /cvsroot/mozilla/security/nss/lib/pki/tdcache.c,v <-- tdcache.c new revision: 1.43; previous revision: 1.42 3.11 branch: /cvsroot/mozilla/security/nss/lib/pki/tdcache.c,v <-- tdcache.c new revision: 1.42.2.1; previous revision: 1.42
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
CID 294
Whiteboard: CID 294
Summary: OOM crash [@ nssList_Count - nssTrustDomain_GetCertsFromCache] Dereferencing possibly NULL "certList" → Coverity OOM crash [@ nssList_Count - nssTrustDomain_GetCertsFromCache] Dereferencing possibly NULL "certList"
Crash Signature: [@ nssList_Count - nssTrustDomain_GetCertsFromCache]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: