[Bug 337009] OOM crash [@ nssList_Count - nssTrustDomain_GetCertsFromCache] Dereferencing possibly NULL "certList". r=nelson

--HG--
branch : NSS_3_11_BRANCH